# controllers/Sctid.js
@@ -3,23 +3,110 @@
  */
 'use strict';
 
+var security = require("./Security");
+
 module.exports.geSctid = function geSctid (req, res, next) {
     var token = req.swagger.params.token.value;
     var sctid = req.swagger.params.sctid.value;
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(
-        {
-            "sctid":  parseInt(sctid),
-            "sequence": 557,
-            "namespace": 1000179,
-            "partitionId": 10,
-            "checkDigit": 7,
-            "systemId": "780ffeb2-aafa-4042-a643-228ec38afc80",
-            "status": "Assigned", // Assigned, Free, Reserved, Locked, Deprecated
-            "author": "alopez",
-            "software": "termSpace",
-            "expirationDate": "2015/08/29 18:02:32 UTC",
-            "comment": "Batch request for July release 2015"
+    security.authenticate(token, function(err, data) {
+        if (err) {
+            return next(err.message);
         }
-    ));
+        res.setHeader('Content-Type', 'application/json');
+        res.end(JSON.stringify(
+            {
+                "sctid": parseInt(sctid),
+                "sequence": 557,
+                "namespace": 1000179,
+                "partitionId": 10,
+                "checkDigit": 7,
+                "systemId": "780ffeb2-aafa-4042-a643-228ec38afc80",
+                "status": "Assigned", // Assigned, Free, Reserved, Locked, Deprecated
+                "author": "alopez",
+                "software": "termSpace",
+                "expirationDate": "2015/08/29 18:02:32 UTC",
+                "comment": "Batch request for July release 2015"
+            }
+        ));
+    });
+};
+
+module.exports.processSctidRequest = function processSctidRequest (req, res, next) {
+    var token = req.swagger.params.token.value;
+    var operation = req.swagger.params.operation.value;
+    security.authenticate(token, function(err, data) {
+        if (err) {
+            return next(err.message);
+        }
+        if (operation.action in generator) {
+            generator[operation.action](operation, function(err2, sctidRecord) {
+                if (err2) {
+                    return next(err2.message);
+                }
+                //
+                res.setHeader('Content-Type', 'application/json');
+                res.end(JSON.stringify(sctidRecord));
+            });
+        } else {
+            return next("Unknown action: " + operation.action);
+        }
+    });
+};
+
+var sctidRecordMock = {
+    "sctid": 0,
+    "sequence": 557,
+    "namespace": 1000179,
+    "partitionId": 10,
+    "checkDigit": 7,
+    "systemId": "780ffeb2-aafa-4042-a643-228ec38afc80",
+    "status": "assigned", // assigned, available, reserved, registered, deprecated, published
+    "author": "alopez",
+    "software": "termSpace",
+    "expirationDate": "2015/08/29 18:02:32 UTC",
+    "comment": "Batch request for July release 2015"
+};
+
+var generator = {};
+
+generator.generate = function(operation, callback) {
+    // TODO: Generates SCTID
+    sctidRecordMock.sctid = operation.sctid;
+    sctidRecordMock.status = "assigned";
+    callback(null, sctidRecordMock);
+};
+
+generator.register = function(operation, callback) {
+    // TODO: Registers SCTID
+    sctidRecordMock.sctid = operation.sctid;
+    sctidRecordMock.status = "registered";
+    callback(null, sctidRecordMock);
+};
+
+generator.reserve = function(operation, callback) {
+    // TODO: Reserves SCTID
+    sctidRecordMock.sctid = operation.sctid;
+    sctidRecordMock.status = "reserved";
+    callback(null, sctidRecordMock);
+};
+
+generator.deprecate = function(operation, callback) {
+    // TODO: Deprecates SCTID
+    sctidRecordMock.sctid = operation.sctid;
+    sctidRecordMock.status = "deprecated";
+    callback(null, sctidRecordMock);
+};
+
+generator.release = function(operation, callback) {
+    // TODO: Releases SCTID
+    sctidRecordMock.sctid = operation.sctid;
+    sctidRecordMock.status = "available";
+    callback(null, sctidRecordMock);
+};
+
+generator.publish = function(operation, callback) {
+    // TODO: Publishes SCTID
+    sctidRecordMock.sctid = operation.sctid;
+    sctidRecordMock.status = "published";
+    callback(null, sctidRecordMock);
 };
